# dbf2csv-py

./: .gitignore  README.md  dbfconv.py  pyproject.toml
dbf2csv/: __init__.py  __main__.py  dbfsignature.py  dbreader.py
dbf2csv_py/: dbfUtils.py
docs/: Main.scala  dBASE .DBF File Structure.txt  dbase version 7 table file.md
