[tool.poetry]
name = "dbf2csv-py"
version = "0.1.0"
description = ""
authors = ["chemacortes <devxtrem@gmail.com>"]
readme = "README.md"
packages = [{include = "dbf2csv_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
